feat: add new dev scheme

--- a/SportBuddy/SportBuddy/App/Resources/en.lproj/Localizable.strings
+++ b/SportBuddy/SportBuddy/App/Resources/en.lproj/Localizable.strings
@@ -29,8 +29,18 @@
 "trainings_title" = "Trainings";
 "settings_title" = "Settings";
 "settings_image" = "Choose image";
+"settings_image_deletion" = "Delete";
 "settings_battery" = "Battery saving";
 "settings_battery_description" = "With this you can control whether to use WebSocket or not";
+"settings_language" = "Language";
+"settings_language_english" = "English";
+"settings_language_hungarian" = "Hungarian";
+"settings_language_system" = "System";
+"settings_language_alert_title" = "Are you sure?";
+"settings_language_alert_message" = "Please confirm";
+"settings_language_alert_button_restart" = "Restart app";
+"settings_language_alert_button_cancel" = "Cancel";
+"settings_language_alert_notification_title" = "Tap to restart the application";
 "settings_close" = "Close";
 "settings_logout" = "Logout";
 "login_login" = "Login";
