--- a/SportBuddy/SportBuddy/App/Resources/en.lproj/Localizable.strings
+++ b/SportBuddy/SportBuddy/App/Resources/en.lproj/Localizable.strings
@@ -57,3 +57,9 @@
 "login_sign_up_success" = "You've signed up successfully!";
 "login_forgot_password_error" = "Forgot password request failed! Try again later.";
 "login_forgot_password_success" = "You've requested a password reset email successfully!";
+"exercise_change_camera" = "Change camera";
+
+"exercise_kettlebell_1_name" = "Kettlebell lifting";
+"exercise_kettlebell_1_details" = "With this you can lift your ketlebells";
+"exercise_kettlebell_1_error_1" = "Put your legs wider";
+"exercise_kettlebell_1_error_2" = "Put your legs narrower";
