--- a/SportBuddy/SportBuddy/App/Resources/hu.lproj/Localizable.strings
+++ b/SportBuddy/SportBuddy/App/Resources/hu.lproj/Localizable.strings
@@ -58,7 +58,7 @@
 "login_forgot_password_success" = "Sikeres jelszókérés!";
 "exercise_change_camera" = "Váltás";
 
-"exercise_kettlebell_1_name" = "Kettlebell emelés";
-"exercise_kettlebell_1_details" = "Ezzel a gyakorlattal ketlebelleket emelhetsz";
+"exercise_kettlebell_1_name" = "Duplakezes kettlebell emelés";
+"exercise_kettlebell_1_details" = "Ezzel a gyakorlattal kettlebelleket emelhetsz";
 "exercise_kettlebell_1_error_1" = "Tedd szét jobban a lábaidat";
 "exercise_kettlebell_1_error_2" = "Zárd össze jobban a lábaidat";
